--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -32,7 +32,7 @@
     <h3 class="mb-3">
       <a class="post-title" href="{{.Permalink}}">{{.Title}}</a>
     </h3>
-    <p>{{ .Plain | truncate 150 }}</p>
+    <p>{{ .Plain | htmlUnescape | truncate 150 }}</p>
 
     <!-- <a href="{{.Permalink}}" aria-label="More on {{.Title}}">Read More <i class="las la-angle-right"></i></a> -->
   </div>
