--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,7 +1,7 @@
 <article class="card post-card">
   {{if .Params.image}}
   <a href="{{.Permalink}}">
-    {{ partial "image.html" (dict "Src" .Params.image "Class" "w-100 h-auto rounded" "Alt" .Title) }}
+    {{ partial "image.html" (dict "Src" .Params.image "Class" "w-100 h-auto rounded" "Alt" .Title "Page" .Page) }}
   </a>
   {{end}}
   <div class="card-body">
