--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,7 +32,9 @@
           {{ partial "image.html" (dict "Src" . "Class" "img-fluid rounded" "Alt" "Post image") }}
         </div>
         {{ end }}
-
+        <div class="mb-5 text-center">
+        {{ partial "image-gallery" (dict "context" . "gallery_dir" "album") }}
+        </div>
         <div class="content">
           {{.Content}}
         </div>
